--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     xmlns:fb="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/texture"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.keyrelations.suggestmesomemovies.MainActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,6 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:textAlignment="center"
+        android:textColor="@color/textColor"
         />
 
     <!-- Facebook Login button from the sdk -->
@@ -57,7 +60,12 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/login_button"
         android:layout_marginTop="80dp"
-        android:textColor="#000"
+        android:textColor="@color/textColor"
+        android:background="@color/textBgColor"
+        android:paddingTop="@dimen/text_bg_vertical_margin"
+        android:paddingBottom="@dimen/text_bg_vertical_margin"
+        android:paddingLeft="@dimen/text_bg_horizontal_margin"
+        android:paddingRight="@dimen/text_bg_horizontal_margin"
         />
 
     <TextView
@@ -72,6 +80,12 @@
         android:layout_below="@id/textView3"
         android:layout_marginTop="20dp"
         android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:background="@color/textBgColor"
+        android:paddingTop="@dimen/text_bg_vertical_margin"
+        android:paddingBottom="@dimen/text_bg_vertical_margin"
+        android:paddingLeft="@dimen/text_bg_horizontal_margin"
+        android:paddingRight="@dimen/text_bg_horizontal_margin"
         />
 
     <TextView
@@ -86,6 +100,12 @@
         android:layout_below="@id/textView4"
         android:layout_marginTop="20dp"
         android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:background="@color/textBgColor"
+        android:paddingTop="@dimen/text_bg_vertical_margin"
+        android:paddingBottom="@dimen/text_bg_vertical_margin"
+        android:paddingLeft="@dimen/text_bg_horizontal_margin"
+        android:paddingRight="@dimen/text_bg_horizontal_margin"
         />
 
 
