--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_bg_vertical_margin">10dp</dimen>
+    <dimen name="text_bg_horizontal_margin">10dp</dimen>
+    <dimen name="new_game_btn_width">200dp</dimen>
+    <dimen name="new_game_btn_text_size">20sp</dimen>
 </resources>
