--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="textColor">#FFF</color>
     <color name="textBgColor">#000</color>
     <color name="black_overlay">#66000000</color>
+    <color name="label_text_color">#000</color>
+    <color name="label_bg_color">#DEB887</color>
+    <color name="common_border_color">#DEB887</color>
 </resources>
