--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="text_bg_horizontal_margin">10dp</dimen>
     <dimen name="new_game_btn_width">200dp</dimen>
     <dimen name="new_game_btn_text_size">20sp</dimen>
+    <dimen name="label_text_size">20sp</dimen>
 </resources>
