--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -7,10 +7,10 @@
     <solid android:color="@color/common_border_color" />
 
     <padding
-        android:left="@dimen/text_bg_horizontal_margin"
-        android:right="@dimen/text_bg_horizontal_margin"
-        android:top="@dimen/text_bg_vertical_margin"
-        android:bottom="@dimen/text_bg_vertical_margin"/>
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp"
+        android:bottom="10dp"/>
 
     <corners android:radius="5dp" />
 </shape>
