--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="new_game_btn_width">200dp</dimen>
     <dimen name="new_game_btn_text_size">20sp</dimen>
     <dimen name="label_text_size">20sp</dimen>
+    <dimen name="outcome_btn_text_size">20sp</dimen>
+    <dimen name="outcome_btn_width">30dp</dimen>
 </resources>
