--- a/app/src/main/res/drawable-mdpi/rounded_corner_outcome.xml
+++ b/app/src/main/res/drawable-mdpi/rounded_corner_outcome.xml
@@ -7,10 +7,10 @@
     <solid android:color="#fff" />
 
     <padding
-        android:left="@dimen/text_bg_horizontal_margin"
-        android:right="@dimen/text_bg_horizontal_margin"
-        android:top="@dimen/text_bg_vertical_margin"
-        android:bottom="@dimen/text_bg_vertical_margin"/>
+        android:left="0dp"
+        android:right="0dp"
+        android:top="10dp"
+        android:bottom="10dp"/>
 
     <corners android:radius="5dp" />
 </shape>
