--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="label_text_size">20sp</dimen>
     <dimen name="outcome_btn_text_size">20sp</dimen>
     <dimen name="outcome_btn_width">30dp</dimen>
+    <dimen name="outcome_tv_width">40dp</dimen>
 </resources>
